Revert "Keeping Sonar happy"
This reverts commit 4af44f80b033633f7d907e3f6f358b6c3dea075f.