@@ -8,6 +8,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.debugadapter.slap.ISlapProtocol;
 import nl.ramsolutions.sw.magik.debugadapter.slap.events.BreakpointEvent;
 import nl.ramsolutions.sw.magik.debugadapter.slap.events.StepCompletedEvent;
@@ -292,7 +293,7 @@ class VariableManager {
         final Comparator<MagikVariable> byName = Comparator.comparing(MagikVariable::getName);
         return magikVariables.stream()
             .sorted(byName)
-            .toList();
+            .collect(Collectors.toList());
     }
     // endregion
 
