@@ -4,6 +4,7 @@ import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.debugadapter.slap.ByteBufferHelper;
 import nl.ramsolutions.sw.magik.debugadapter.slap.ISlapResponse;
 import nl.ramsolutions.sw.magik.debugadapter.slap.RequestType;
@@ -122,7 +123,7 @@ public class ThreadStackResponse implements ISlapResponse {
     public ThreadStackResponse(final List<ISlapResponse> subResponses) {
         this.stackFrames = subResponses.stream()
             .map(StackElement.class::cast)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public List<StackElement> getStackFrames() {
