@@ -2,6 +2,7 @@ package nl.ramsolutions.sw.magik.languageserver.documentsymbols;
 
 import com.sonar.sslr.api.AstNode;
 import java.util.List;
+import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.MagikTypedFile;
 import nl.ramsolutions.sw.magik.analysis.Range;
 import nl.ramsolutions.sw.magik.analysis.definitions.BinaryOperatorDefinition;
@@ -48,7 +49,7 @@ public class DocumentSymbolProvider {
         return definitionReader.getDefinitions().stream()
             .map(this::convertDefinition)
             .map(Either::<org.eclipse.lsp4j.SymbolInformation, DocumentSymbol>forRight)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     private DocumentSymbol convertDefinition(final Definition definition) {
@@ -58,7 +59,8 @@ public class DocumentSymbolProvider {
             symbolKind,
             Lsp4jConversion.rangeToLsp4j(new Range(definition.getNode())),
             Lsp4jConversion.rangeToLsp4j(new Range(definition.getNode())));
-        if (definition instanceof final SlottedExemplarDefinition exemplarDefinition) {
+        if (definition instanceof SlottedExemplarDefinition) {
+            final SlottedExemplarDefinition exemplarDefinition = (SlottedExemplarDefinition) definition;
             final List<DocumentSymbol> slotSymbols = this.convertedSlotsFromDefinition(exemplarDefinition);
             documentSymbol.setChildren(slotSymbols);
         }
@@ -88,7 +90,7 @@ public class DocumentSymbolProvider {
                 SymbolKind.Field,
                 Lsp4jConversion.rangeToLsp4j(new Range(slotDefinition.getNode())),
                 Lsp4jConversion.rangeToLsp4j(new Range(slotDefinition.getNode()))))
-            .toList();
+            .collect(Collectors.toList());
     }
 
 }
