@@ -3,6 +3,7 @@ package nl.ramsolutions.sw.magik.languageserver.rename;
 import com.sonar.sslr.api.AstNode;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.annotation.CheckForNull;
 import nl.ramsolutions.sw.magik.MagikTypedFile;
@@ -113,7 +114,7 @@ public class RenameProvider {
                 .map(Range::new)
                 .map(Lsp4jConversion::rangeToLsp4j)
                 .map(range -> new TextEdit(range, newName))
-                .toList();
+                .collect(Collectors.toList());
         return new WorkspaceEdit(Map.of(uri, textEdits));
     }
 
