@@ -3,6 +3,7 @@ package nl.ramsolutions.sw.magik.languageserver.signaturehelp;
 import com.sonar.sslr.api.AstNode;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.MagikTypedFile;
 import nl.ramsolutions.sw.magik.analysis.AstQuery;
 import nl.ramsolutions.sw.magik.analysis.helpers.MethodDefinitionNodeHelper;
@@ -80,7 +81,7 @@ public class SignatureHelpProvider {
                 .flatMap(signatureType -> signatureType.getMethods().stream())
                 .filter(method -> method.getName().startsWith(methodName))
                 .map(method -> new SignatureInformation(method.getSignature(), method.getDoc(), null))
-                .toList();
+                .collect(Collectors.toList());
         } else {
             if (type == SelfType.INSTANCE) {
                 final AstNode methodDefNode = currentNode.getFirstAncestor(MagikGrammar.METHOD_DEFINITION);
@@ -92,7 +93,7 @@ public class SignatureHelpProvider {
             sigInfos = type.getMethods().stream()
                 .filter(method -> method.getName().startsWith(methodName))
                 .map(method -> new SignatureInformation(method.getSignature(), method.getDoc(), null))
-                .toList();
+                .collect(Collectors.toList());
         }
 
         return new SignatureHelp(sigInfos, null, null);
