@@ -6,6 +6,7 @@ import com.sonar.sslr.api.Token;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.annotation.CheckForNull;
 import nl.ramsolutions.sw.magik.api.MagikGrammar;
@@ -116,7 +117,7 @@ public final class AstQuery {
                 final Range range = new Range(token);
                 return position.isBeforeRange(range);
             })
-            .toList();
+            .collect(Collectors.toList());
         if (nodes.isEmpty()) {
             return null;
         }
@@ -139,7 +140,7 @@ public final class AstQuery {
                 return !position.isBeforeRange(range)
                     && !position.isAfterRange(range);
             })
-            .toList();
+            .collect(Collectors.toList());
         if (nodes.isEmpty()) {
             return null;
         }
@@ -181,7 +182,7 @@ public final class AstQuery {
                 final Range range = new Range(token);
                 return position.isAfterRange(range);
             })
-            .toList();
+            .collect(Collectors.toList());
         if (nodes.isEmpty()) {
             return null;
         }
@@ -213,15 +214,13 @@ public final class AstQuery {
                     && (position.getLine() < lastLine
                         || position.getLine() == lastLine && position.getColumn() <= lastColumn);
             })
-            .toList();
+            .collect(Collectors.toList());
         if (nodes.isEmpty()) {
             return null;
         }
-
         if (nodes.size() > 1 && nodes.get(0).is(MagikGrammar.MAGIK)) {
-            return nodes.get(1);
+            nodes.remove(0);
         }
-
         return nodes.get(0);
     }
 
@@ -254,7 +253,7 @@ public final class AstQuery {
                             || position.getLine() == lastLine && position.getColumn() <= lastColumn);
             })
             .filter(node -> nodeTypesList.contains(node.getType()))
-            .toList();
+            .collect(Collectors.toList());
         if (nodes.isEmpty()) {
             return null;
         }
