@@ -1,6 +1,7 @@
 package nl.ramsolutions.sw.magik.typedchecks;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.checks.DisabledByDefault;
 import nl.ramsolutions.sw.magik.checks.TemplatedMagikCheck;
 import nl.ramsolutions.sw.magik.typedchecks.checks.GlobalKnownTypedCheck;
@@ -43,7 +44,7 @@ public final class CheckList {
     public static List<Class<?>> getDisabledByDefaultChecks() {
         return getChecks().stream()
             .filter(checkClass -> checkClass.getAnnotation(DisabledByDefault.class) != null)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     /**
@@ -53,7 +54,7 @@ public final class CheckList {
     public static List<Class<?>> getTemplatedChecks() {
         return getChecks().stream()
             .filter(checkClass -> checkClass.getAnnotation(TemplatedMagikCheck.class) != null)
-            .toList();
+            .collect(Collectors.toList());
     }
 
 }
